feat[data hook]: Added err message, loading & image component

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,2 +1,8 @@
 @import 'base';
 @import 'variables';
+
+// Normally I'd opt for using a css utility framework such as Tailwind
+// I used Tailwind's naming conventions
+// utilities
+@import 'utilities/position';
+
