feat[imageGrid]: Added Grid, GritItem & Lightbox component

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,3 +8,6 @@
 @import 'utilities/layout';
 @import 'utilities/position';
 @import 'utilities/sizing';
+@import 'utilities/colors';
+@import 'utilities/lists';
+@import 'utilities/cursor';
