--- a/src/assets/scss/utilities/position.scss
+++ b/src/assets/scss/utilities/position.scss
@@ -8,6 +8,30 @@
   }
 }
 
+.top-0 {
+  top: 0;
+}
+
+.top-1 {
+  top: 1rem;
+}
+
+.left-0 {
+  left: 0;
+}
+
+.bottom-0 {
+  bottom: 0;
+}
+
+.right-0 {
+  right: 0;
+}
+
+.right-1 {
+  right: 1rem;
+}
+
 .z-50 {
   z-index: 50;
 }
