--- a/src/assets/scss/utilities/layout.scss
+++ b/src/assets/scss/utilities/layout.scss
@@ -3,5 +3,15 @@
 
   .flex-1 {
     flex: 1 1 0;
-    }
+  }
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-gap: 1rem;
+
+  @media (min-width: $medium) {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
 }
