feat[ImageGrid]: Add lightbox functions, added styling utils

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,6 +8,7 @@
 @import 'utilities/layout';
 @import 'utilities/position';
 @import 'utilities/sizing';
+@import 'utilities/spacing';
 @import 'utilities/colors';
 @import 'utilities/lists';
 @import 'utilities/cursor';
