styling: Styling general layout & typography

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -10,5 +10,7 @@
 @import 'utilities/sizing';
 @import 'utilities/spacing';
 @import 'utilities/colors';
+@import 'utilities/typography';
+@import 'utilities/borders';
 @import 'utilities/lists';
 @import 'utilities/cursor';
