--- a/src/assets/scss/utilities/layout.scss
+++ b/src/assets/scss/utilities/layout.scss
@@ -1,5 +1,10 @@
 .flex {
   display: flex;
+  flex-direction: column;
+
+  @media (min-width: $medium) {
+    flex-direction: row;
+  }
 
   .flex-1 {
     flex: 1 1 0;
