--- a/src/assets/scss/utilities/borders.scss
+++ b/src/assets/scss/utilities/borders.scss
@@ -1,3 +1,7 @@
+.border-none {
+  border: none;
+}
+
 .border-0 {
   border-width: 0;
 }
@@ -12,4 +16,8 @@
 
 .border-solid {
   border-style: solid;
+}
+
+.outline-none {
+  outline: none;
 }
