--- a/src/assets/scss/utilities/position.scss
+++ b/src/assets/scss/utilities/position.scss
@@ -4,12 +4,12 @@
 
 .absolute {
   position: absolute;
+}
 
-  &.center {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+.center {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .center-v {
